; ModuleID = '/home/carl/AnghaBench/qmk_firmware/layouts/community/ergodox/algernon/extr_keymap.c_qk_ucis_symbol_fallback.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/layouts/community/ergodox/algernon/extr_keymap.c_qk_ucis_symbol_fallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64* }

@qk_ucis_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@A_1 = common dso_local global i32 0, align 4
@A_0 = common dso_local global i32 0, align 4
@KC_1 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qk_ucis_symbol_fallback() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %51, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @qk_ucis_state, i32 0, i32 0), align 8
  %6 = sub nsw i32 %5, 1
  %7 = icmp slt i32 %4, %6
  br i1 %7, label %8, label %54

8:                                                ; preds = %3
  %9 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @qk_ucis_state, i32 0, i32 1), align 8
  %10 = load i32, i32* %1, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i64, i64* %9, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = load i32, i32* @A_1, align 4
  %15 = call i64 @M(i32 %14)
  %16 = icmp sge i64 %13, %15
  br i1 %16, label %17, label %38

17:                                               ; preds = %8
  %18 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @qk_ucis_state, i32 0, i32 1), align 8
  %19 = load i32, i32* %1, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i64, i64* %18, i64 %20
  %22 = load i64, i64* %21, align 8
  %23 = load i32, i32* @A_0, align 4
  %24 = call i64 @M(i32 %23)
  %25 = icmp sle i64 %22, %24
  br i1 %25, label %26, label %38

26:                                               ; preds = %17
  %27 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @qk_ucis_state, i32 0, i32 1), align 8
  %28 = load i32, i32* %1, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i64, i64* %27, i64 %29
  %31 = load i64, i64* %30, align 8
  %32 = load i32, i32* @A_1, align 4
  %33 = call i64 @M(i32 %32)
  %34 = sub nsw i64 %31, %33
  %35 = load i64, i64* @KC_1, align 8
  %36 = add nsw i64 %34, %35
  %37 = trunc i64 %36 to i32
  store i32 %37, i32* %2, align 4
  br label %45

38:                                               ; preds = %17, %8
  %39 = load i64*, i64** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @qk_ucis_state, i32 0, i32 1), align 8
  %40 = load i32, i32* %1, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i64, i64* %39, i64 %41
  %43 = load i64, i64* %42, align 8
  %44 = trunc i64 %43 to i32
  store i32 %44, i32* %2, align 4
  br label %45

45:                                               ; preds = %38, %26
  %46 = load i32, i32* %2, align 4
  %47 = call i32 @register_code(i32 %46)
  %48 = load i32, i32* %2, align 4
  %49 = call i32 @unregister_code(i32 %48)
  %50 = call i32 @wait_ms(i32 10)
  br label %51

51:                                               ; preds = %45
  %52 = load i32, i32* %1, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %1, align 4
  br label %3

54:                                               ; preds = %3
  ret void
}

declare dso_local i64 @M(i32) #1

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @wait_ms(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
